crates/keron-lang/tests/corpus/errors/check/if_non_boolean_cond.keron
val r: Int = if 1 { 2 } else { 3 }
